--- a/src/styles/base.sass
+++ b/src/styles/base.sass
@@ -8,6 +8,5 @@ html
   height: 100%
   font-size: 62.5% // == 10px (so that 1rem == 10px)
 
-.asd
-  background-color: aquamarine
-  font-size: 5rem
+body
+  margin: 0
