--- a/src/styles/list.sass
+++ b/src/styles/list.sass
@@ -1,3 +1,9 @@
 .list
-  padding: 0
+  padding: 0 20px
+  margin: 0 auto
   list-style-type: none
+
++media-breakpoint-up($breakpoint-sm)
+  .list
+    max-width: 700px
+    width: 100%
