--- a/src/styles/movie-tile.sass
+++ b/src/styles/movie-tile.sass
@@ -21,6 +21,7 @@
     border-radius: .4rem
     transition: background-color .3s, color .3s
     padding: .9rem 1.5rem
+    font-weight: 600
 
     &:hover
       background-color: $color-button-primary-hover
