--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -1,8 +1,10 @@
 @import variables
 @import mixins
+@import animations
 
 @import base
 
 @import container
 @import list
 @import movie-tile
+@import modal
