--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -23,3 +23,4 @@ $breakpoint-lg: 1240px
 //other
 $box-shadow-main: 0 .4rem 1.2rem 0 rgba(153, 153, 153, .12)
 $border-main: .1rem solid rgba(217, 217, 217, .67)
+$color-overlay: rgba($color-black, .8)
