--- a/src/styles/modal.sass
+++ b/src/styles/modal.sass
@@ -2,7 +2,7 @@
   margin: auto
   min-height: 30rem
   width: 100%
-  max-width: 46.6rem
+  max-width: 65rem
   min-width: 30rem
   position: relative
   background-color: $color-white
@@ -11,6 +11,8 @@
   pointer-events: none
   display: flex
   padding: 20px 10px
+  overflow-y: auto
+  max-height: 85vh
 
   &__page-overlay
     position: fixed
@@ -26,7 +28,7 @@
     z-index: 9
     padding: 5.8rem 1rem
     -webkit-overflow-scrolling: touch // sass-lint:disable-line no-vendor-prefixes
-    overflow-y: auto
+    cursor: pointer
 
     &--modal-in
         +appear-animation(overlay-in)
@@ -44,10 +46,67 @@
   &__img-wrapper
     display: none
 
+  &__header
+    display: flex
+    align-items: center
+    justify-content: space-between
+    margin-bottom: 10px
+
+  &__title-wrapper
+    max-width: 90%
+
+  &__title
+    margin-top: 0
+    font-size: 2rem
+
+  &__release-date,
+    font-size: 1.4rem
+
+  &__vote
+    font-size: 2.4rem
+
+  &__overview
+    font-size: 1.6rem
+    margin-bottom: 10px
+
+  &__genre
+    display: flex
+    justify-content: space-between
+    font-size: 1.8rem
+    margin-bottom: 10px
+
+  &__genre-title
+    margin-right: 5px
+
+  &__genre-wrapper
+    display: flex
+    flex-wrap: wrap
+
+  &__genre-type
+    margin: 0 2.5px
+
+  &__production-company
+    display: flex
+    flex-wrap: wrap
+    justify-content: space-between
+
+  &__button
+    position: absolute
+    top: -25px
+    right: 0
+    color: $color-white
+    font-size: 1.6rem
+    height: 20px
+    width: 20px
+    cursor: pointer
+
 +media-breakpoint-up($breakpoint-sm)
   .modal
     &__img-wrapper
       display: block
-      height: 124px
-      width: 94px
+      height: 100%
+      width: 100%
       margin-right: 20px
+
+    &__poster-image
+      width: 100%
